<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_marginBottom="80dp"
        android:layout_marginTop="80dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_conn">

        <RelativeLayout
            android:id="@+id/rl_serach_fail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="6dp">


            <TextView
                android:id="@+id/tv_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_11"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:text="@string/sdk_bluetooth_conn_bike_not_found"
                android:textColor="#ffffff" />


            <TextView
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/tv_12"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_round_bg_whit"
                android:gravity="center"
                android:text="@string/sdk_bluetooth_conn_reconnect"
                android:textColor="#1e1f20"
                android:textSize="16sp"
                android:textStyle="normal" />


            <LinearLayout
                android:id="@+id/ll_hotline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="若多次搜索不到设备或无法连接电单车，请联系我们"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="客服电话："
                        android:textColor="#ffffff"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/tv_tel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="400-819-0660"
                        android:textColor="#187dfa"
                        android:textSize="12sp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/tv_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="服务时间：周一至周五，上午9:00~12:00，"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="下午13:00~18:00（不包含法定节假日）"
                    android:textColor="#ffffff"
                    android:textSize="12sp" />


            </LinearLayout>

            <TextView
                android:id="@+id/tv_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="100dp"
                android:text="@string/sdk_bluetooth_conn_communication_failure"
                android:textColor="#ffffff"
                android:textSize="21sp" />


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/ic_close" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>